--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
-sudo: required
-dist: trusty
 language: node_js
+sudo: enabled
 
 node_js:
-  - 8
+  - "8"
 
-cache:
-  directories:
-    - node_modules
+install:
+- npm install
